--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "dev": "vue-cli-service serve --mode dev"
   },
   "dependencies": {
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.14.5",
+    "@babel/plugin-proposal-optional-chaining": "^7.14.5",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
