--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.14.5",
     "@babel/plugin-proposal-optional-chaining": "^7.14.5",
     "core-js": "^3.6.5",
+    "js-cookie": "^3.0.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
@@ -31,6 +32,7 @@
     "prettier": "^2.2.1",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
+    "style-resources-loader": "^1.4.1",
     "vue-template-compiler": "^2.6.11"
   },
   "gitHooks": {
